--- a/mainWindow.css
+++ b/mainWindow.css
@@ -20,6 +20,7 @@ body{
     font-weight: 900;
     font-size: 11px;
     outline-color: transparent;
+    transition: 0.3s;
 }
 #minimizeApp{
     -webkit-app-region: no-drag;
@@ -31,6 +32,7 @@ body{
     font-family: 'Nunito';
     height: 22px;
     outline-color: transparent;
+    transition: 0.3s;
 }
 #maximizeApp{
     -webkit-app-region: no-drag;
@@ -42,6 +44,7 @@ body{
     font-family: 'Nunito';
     height: 22px;
     outline-color: transparent;
+    transition: 0.3s;
 }
 #minimizeApp:hover, #maximizeApp:hover {
     background: #414141;
@@ -51,33 +54,73 @@ body{
     background: #B92828;
     outline-color: transparent;
 }
+
+
 .mainSideBar {
     background-color: #171717;
     height: 100%;
-    width: 20%;
+    width: 25%;
     position: fixed;
     z-index: 1;
 }
 .content {
     position: absolute;
-    left: 20%;
+    left: 25%;
 }
 
 /*main task window (daily)*/
 #img_container {
     position: sticky;
     overflow: hidden;
-    width: 80%;
+    width: 90%;
     height: 200px;
     margin: 35px auto;
-    border-radius: 6px;
-    box-shadow: 0px 0px 10px 0px #00000059;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px #00000033;
 }
 #img_container img {
     width: 100%;
+    filter: brightness(0.7);
+    /* Not sure if we should include it in the final build.
+    filter: blur(2px);
+    */
 }
-
-
+h1.title{
+    bottom: 20px;
+    position: sticky;
+    margin-left: 5%;
+    color: white;
+    font-family: 'Nunito';
+    font-size: 50px;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.329);
+}
+button#addReminder{
+    bottom: 13px;
+    position: sticky;
+    margin-right: 5%;
+    color: white;
+    font-family: 'Nunito';
+    font-size: 50px;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.329);
+    float: right;
+    background-color: transparent;
+    border: 0px;
+    opacity: 0.8;
+    transition: 0.3s;
+}
+button#addReminder:hover{
+    color: white;
+    opacity: 1;
+}
+.reminders li {
+    margin: 10px 5%;
+    background: #292929;
+    color: rgb(211, 211, 211);
+    padding: 16px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px #00000033;
+    font-family: 'Nunito';
+}
 
 
 
@@ -97,4 +140,18 @@ body{
 }
 ::-webkit-scrollbar-thumb:hover {
     background: #353535;
+}
+
+
+#addItem{
+    display: none;
+    background: white;
+    z-index: 300;
+    animation: drop 0.5s ease forwards;
+}
+
+@keyframes drop{
+    0%{}
+    70%{ transform: translateY(400px)}
+    100%{ transform: translateY(350px)}
 }
